# rust-rescript-demo

./: .dockerignore  .env.development  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
api/: Cargo.toml  sqlx-data.json
api/migrations/: 20201105125532_create_updated_at_management_functions.sql  20201105130128_create_posts.sql
api/src/: env.rs  log.rs  main.rs  server.rs
api/src/gql/: db.rs  http.rs  inputs.rs  mod.rs  mutations.rs  queries.rs  result.rs  schema.rs
api/src/gql/inputs/: post_create.rs  post_update.rs
api/src/gql/mutations/: post_create.rs  post_delete.rs  post_update.rs
api/src/gql/queries/: post_get_all.rs  post_get_by_id.rs
api/src/models/: post.rs
api/src/pg/: mod.rs  pool.rs  queries.rs
api/src/pg/queries/: post_create.rs  post_create.sql  post_delete.rs  post_delete.sql  post_get_all.rs  post_get_all.sql  post_get_by_id.rs  post_get_by_id.sql  post_update.rs  post_update.sql
cli/: app.rs  cfg.rs  cli.rs  cmd.rs  env.rs  loc.rs  main.rs  net.rs  printer.rs  result.rs  services.rs
cli/services/: api.rs  cli.rs  client.rs  docker.rs  postgres.rs  sys.rs  yarn.rs
client/: bsconfig.json  graphql_schema.json  package.json  webpack.config.js
client/cfg/: webpack.development.config.js  webpack.production.config.js
client/src/: App.res  Route.res  Route.resi  Router.res  index.html
client/src/api/: Api.res
client/src/api/mutations/: PostMutation__Create.res  PostMutation__Delete.res  PostMutation__Update.res
client/src/api/queries/: PostQuery__GetAll.res  PostQuery__GetById.res
client/src/components/: Layout.res  PostEditor.res
client/src/lib/: Env.res  Http.res  Ident.res  XmlHttpRequest.res
client/src/models/: Post.res  PostFragment.res  PostId.res
client/src/pages/: EditPostPage.res  NewPostPage.res  NotFoundPage.res  PostPage.res  PostsPage.res
client/src/styleguide/: Color.res  Font.res  GlobalStyles.res  Mq.res  Transition.res
client/src/styleguide/components/Button/: Button.res
client/src/styleguide/components/Form/: Form.res
client/src/styleguide/components/Heading/: H1.res  H2.res  HeadingStyles.res
client/src/styleguide/components/Hr/: Hr.res
client/src/styleguide/components/Link/: Link.res
env/: env.development.example  env.example  env.test.example
server/: Cargo.toml
server/src/: main.rs
(+2 files in other folders)
