[package]
name = "rust-rescript-demo"
version = "0.0.1"
edition = "2018"
authors = ["Alex Fedoseev <alex.fedoseev@gmail.com>"]

[[bin]]
name = "rrd"
path = "./cli/main.rs"

[dependencies]
tokio = { version = "0.3.3", features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "process", "signal", "net"] }
clap = "3.0.0-beta.2"
console = "0.13.0"
dotenv = "0.15.0"
hyper = { git = "https://github.com/hyperium/hyper" }
lazy_static = "1.4.0"
rand = "0.7.3"

[target.'cfg(unix)'.dependencies]
nix = "0.19.0"

[workspace]
members = [
  "api"
]
