[package]
name = "api"
version = "0.0.1"
edition = "2018"
authors = ["Alex Fedoseev <alex.fedoseev@gmail.com>"]

[dependencies]
actix-web = "3.2.0"
actix-cors = "0.5.1"
graphql = { package = "async-graphql", version = "2.0.12" }
graphql-actix-web = { package = "async-graphql-actix-web", version = "2.0.12" }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-actix", "macros", "postgres", "offline", "uuid" ] }
serde = "1.0.117"
serde_json = "1.0.59"
log = "0.4.11"
env_logger = "0.8.1"
